# sfml_sprite_sheet

./: CMakeLists.txt  LICENSE  README.md  sfml_sprite_sheet.pc.in  sfml_sprite_sheetConfig.cmake.in
include/: animated_sprite.hpp  animation.hpp  animation_loader.hpp  animation_player.hpp  sprite_sheet.hpp  utils.hpp
src/: animated_sprite.cpp  animation.cpp  animation_loader.cpp  animation_player.cpp  file_utils.cpp  sprite_sheet.cpp
